--- a/index.html
+++ b/index.html
@@ -58,16 +58,21 @@
             </div>
             <!-- some inspiration section -->
             <div id="inspiration-section">
-                <blockquote>
-
-                </blockquote>
+                <div class="quote">
+                    <blockquote>
+                        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                    </blockquote>
+                    <figcaption>-Tore, mora mor bor</figcaption>
+                </div>
             </div>
             <!-- sign up and contact section -->
             <div id="contact-section">
                 <div id="signup-container">
-                    <h3>Call to action! It's time!</h3>
-                    <p>Sign up for our product by clicking that button right over there!</p>
-                    <button>Sign up</button>
+                    <div class="signup">
+                        <h3>Call to action! It's time!</h3>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button class="contact-btn">Sign up</button>
                 </div>
             </div>
        </main>
